--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "discord.js": "^11.2.1",
-    "dotenv": "^4.0.0"
+    "dotenv": "^4.0.0",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "node-opus": "^0.2.7"
   }
 }
