--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^4.9.0"
   },
   "dependencies": {
+    "commander": "^2.11.0",
     "discord.js": "^11.2.1",
     "dotenv": "^4.0.0",
     "ffmpeg-binaries": "^3.2.2-3",
