--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "eslint": "^4.9.0"
   },
   "dependencies": {
-    "commander": "^2.11.0",
     "discord.js": "^11.2.1",
     "dotenv": "^4.0.0",
     "ffmpeg-binaries": "^3.2.2-3",
-    "node-opus": "^0.2.7"
+    "minimist": "^1.2.0",
+    "node-opus": "^0.2.7",
+    "string-argv": "0.0.2"
   }
 }
